--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,9 @@ NODE_ENV="default is development"
 NODE_PORT=any_port_you_desire_default_is_8000
 
 # Database config, for more info con connection strings see Primsa <https://pris.ly/d/connection-strings>
-DATABASE_URL="provider://db_user:db_pwd@db_host/db_name"
+## The following one represents de connection string for a pg database.
+### The default schema is public, in that you can omit the schema query for the connection string.
+DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA "
 
 # API host
 API_HOST="your api host"
