--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@types/node": "^14.14.31",
         "@types/reflect-metadata": "^0.1.0",
         "@types/source-map-support": "^0.5.3",
+        "@types/winston": "^2.4.4",
         "nodemon": "^2.0.7",
         "tsc-watch": "^4.2.9",
         "typescript": "^4.2.2"
@@ -57,7 +58,8 @@
         "reflect-metadata": "^0.1.13",
         "source-map-support": "^0.5.19",
         "swagger-ui-express": "^4.1.6",
-        "tsoa": "^3.5.2"
+        "tsoa": "^3.5.2",
+        "winston": "^3.3.3"
     },
     "_moduleAliases": {
         "@root": ".",
