feat: login & register with jwt

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,9 @@ NODE_PORT=any_port_you_desire_default_is_8000
 ### The default schema is public, in that you can omit the schema query for the connection string.
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA "
 
+# JWT Secrets
+JWT_ACCESS_SECRET="some secret"
+JWT_REFRESH_SECRET="some secret"
+
 # API host
 API_HOST="your api host"
