--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     },
     "homepage": "https://github.com/cddemar/ExTSPrimsaREST-BoilerPlate#readme",
     "devDependencies": {
+        "@types/argon2": "^0.15.0",
         "@types/compression": "^1.7.0",
         "@types/cors": "^2.8.10",
         "@types/express": "^4.17.11",
         "@types/helmet": "^4.0.0",
+        "@types/jsonwebtoken": "^8.5.0",
         "@types/module-alias": "^2.0.0",
         "@types/morgan": "^1.9.2",
         "@types/node": "^14.14.31",
@@ -46,12 +48,14 @@
         "@prisma/client": "^2.18.0",
         "@types/dotenv": "^8.2.0",
         "@types/swagger-ui-express": "^4.1.2",
+        "argon2": "^0.27.1",
         "compression": "^1.7.4",
         "concurrently": "^6.0.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "helmet": "^4.4.1",
+        "jsonwebtoken": "^8.5.1",
         "module-alias": "^2.2.2",
         "morgan": "^1.10.0",
         "prisma": "^2.18.0",
